--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "cakephp/migrations": "^1.0",
         "cakephp/plugin-installer": "^1.0",
         "josegonzalez/dotenv": "3.*",
-        "mobiledetect/mobiledetectlib": "2.*",
-        "cakephp/debug_kit": "^3.2"		
+        "mobiledetect/mobiledetectlib": "2.*"
     },
     "require-dev": {
+        "cakephp/debug_kit": "^3.2",
         "cakephp/bake": "^1.1",
         "cakephp/cakephp-codesniffer": "^3.0",
         "psy/psysh": "@stable"
